--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "News"
     url: "/#-news"
 
-  # - title: "Research Experience"
-  #   url: "/#-Research-Experience"
+  - title: "Research Experience"
+    url: "/#-Research-Experience"
 
   - title: "Publications"
     url: "/#-publications"
@@ -18,7 +18,7 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  # - title: "Campus Experience"
-  #   url: "/#-Campus-Experience"
+  - title: "Campus Experience"
+    url: "/#-Campus-Experience"
 
   
