--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xiaoyan's Page"
-description              : "Undergraduate from Zhejiang University. Focus on 3D/2D Computer Vision, Robotics."
+description              : "Undergraduate from Zhejiang University. Focus on 3D/2D Computer Vision, Computer Graphics, Robotics."
 repository               : "xy-cong/xy-cong.github.io"
 google_scholar_stats_use_cdn : true
 
