--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "News"
     url: "/#-news"
 
-  - title: "Research Experience"
+  - title: "Experience"
     url: "/#-research-experience"
 
   - title: "Publications"
