--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xiaoyan Cong"
-description              : "Senior undergraduate from Zhejiang University. Focus on 3D Computer Vision, Computer Graphics, Robotics and Generative AI."
+description              : "Incoming CS PhD student at Brown University. Focus on 3D Computer Vision, Computer Graphics, Robotics and Generative AI."
 repository               : "xy-cong/xy-cong.github.io"
 google_scholar_stats_use_cdn : true
 
