--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "rccxy28@gmail.com"
+  email            : "xiaoyan_cong@brown.edu"
   researchgate     :  
   uri              :
   bitbucket        :
