--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Xiaoyan Cong"
-  avatar           : "images/self-photo.jpg"
+  avatar           : "images/self-photo-2.jpg"
   bio              : "Zhejiang University"
   location         : # "Hangzhou, Zhejiang, China"
   employer         :
